--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Colores */
-  --color-primary: #858585;
+  --color-primary: #dd2222;
   --color-primary-light: #60a5fa;
   --color-primary-dark: #2563eb;
   --color-text: #1f2937;
